# bitstring

./: .clang-tidy  .editorconfig  CMakeLists.txt  LICENSE  README  README.md
cmake/: CompilerWarnings.cmake  DefaultSettings.cmake  StaticAnalyzers.cmake
include/: bitstring.hpp
include/bitstring/: bit_array.hpp  endian.hpp  exceptions.hpp  literals.hpp
src/: bit_array.cpp  literals.cpp  util.hpp
test/: test_bit_index.cpp  test_comparison.cpp  test_endian.cpp  test_format.cpp  test_init.cpp  test_modify.cpp  test_operators.cpp  util.cpp  util.hpp
